<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="about">About</string>
    <string name="about_text">This is an Asteroids game.</string>
    <string name="app_name">Asteroids</string>
    <string name="app_title">Asteroids</string>
    <string name="configuration">Configuration</string>
    <string name="configure">Configure</string>
    <string name="exit">Exit</string>
    <string name="hello_world">Hello world!</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="menu_settings">Settings</string>
    <string name="player">Player</string>
    <string name="scores">Scores</string>
    <string name="start">Start</string>
    <string name="pref_music_title">Music</string>
    <string name="pref_music_summary">The game will reproduce music</string>
    <string name="pref_graphics_title">Graphic type</string>
    <string name="pref_graphics_summary">Choose the graphic representation</string>
    <string name="pref_pieces_title">Number of pieces</string>
    <string name="pref_pieces_summary">How many pieces will asteroids be divided</string>
    <string name="scores_void">No scores yet</string>
    <string name="title_activity_game">Game</string>

</resources>